--- a/frontend/main.css
+++ b/frontend/main.css
@@ -24,18 +24,49 @@ LEVEL 1. CORE STYLES
 =====
 */
 
-.param_top
-{
-  font-size: 20px; 
-  padding-bottom: 8px; 
-  border-right: 4px solid rgba(0,0,0, 0.12);
+
+
+#container {
+  display: flex;                  /* establish flex container */
+  flex-direction: row;            /* default value; can be omitted */
+  flex-wrap: nowrap;              /* default value; can be omitted */
+  justify-content: space-between; /* switched from default (flex-start, see below) */
 }
-.param_bottom
-{
-  font-size: 20px; 
-  padding-bottom: 6px; 
-  border-bottom: 4px solid rgba(0,0,0, 0.12); 
-  border-right: 4px solid rgba(0,0,0, 0.12);
+#container > div {
+  width: 33vw;
+  /*border: 2px dashed red;*/
+}
+
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 8px;
+  height: 35px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
 }
 
 @media (max-width: 1200px) {
@@ -45,6 +76,44 @@ LEVEL 1. CORE STYLES
     margin-right: auto;
     width: 40%;
     margin-top:50px;
+  }
+}
+
+@media (min-width: 1681px) 
+{
+  #weight-slider{
+    width: 50%;
+  }
+
+  #reps-slider{
+    width: 50%;
+  }
+
+  #sets-slider{
+    width: 50%;
+  }
+
+  #maxrep-slider{
+    width: 50%;
+  }
+}
+
+@media (max-width: 1680px) 
+{
+  #weight-slider{
+    width: 100%;
+  }
+
+  #reps-slider{
+    width: 100%;
+  }
+
+  #sets-slider{
+    width: 100%;
+  }
+
+  #maxrep-slider{
+    width: 100%;
   }
 }
 
@@ -253,22 +322,19 @@ LEVEL 3. SETTINGS
 
 /* select starting stylings ------------------------------*/
 .select {
-	position: relative;
-	width: 350px;
+  position: relative;
+  width: 275px;
 }
 
 .select-text {
+  width: 100%;
 	position: relative;
 	font-family: inherit;
 	background-color: transparent;
-	width: 350px;
 	padding: 10px 10px 10px 0;
 	font-size: 18px;
 	border-radius: 1;
-	border: #000;
-  border-bottom: 4px solid rgba(0,0,0, 0.12);
-  border-right: 4px solid rgba(0,0,0, 0.12);
-
+  border: #000;
 }
 
 /* Remove focus */
@@ -286,12 +352,13 @@ LEVEL 3. SETTINGS
 .select:after {
 	position: absolute;
 	top: 18px;
-	right: 10px;
+  right: 10px;
+  font-size:10000px;
+
 	/* Styling the down arrow */
 	width: 0;
 	height: 0;
 	padding: 0;
-	content: '';
 	border-left: 6px solid transparent;
 	border-right: 6px solid transparent;
 	border-top: 6px solid rgba(0, 0, 0, 0.12);
@@ -318,9 +385,10 @@ LEVEL 3. SETTINGS
 /* active state */
 .select-text:focus ~ .select-label, .select-text:valid ~ .select-label {
 	color: #00ad5f;
-	top: -20px;
-	transition: 0.2s ease all;
-	font-size: 14px;
+  top: -20px;
+  right: -20px;
+	transition: 0.5s ease all;
+	font-size: 1004px;
 }
 
 /* BOTTOM BARS ================================= */
@@ -405,7 +473,7 @@ select option {
 .select-bar {
 	position: relative;
 	display: block;
-  width: 350px;
+  width: 80%;
   color: #00ad5f;
 
 }
@@ -422,6 +490,8 @@ select option {
 
 .title:empty:not(:focus):before {
   content: attr(data-placeholder);
+  color: #4e4e4e;
+  font-weight: bold; 
 }
 
 .sidenav {
@@ -1051,7 +1121,6 @@ th, td {
   font-size: 15px;
   color: #808080;
   line-height: 1.4;
-
   background-color: #f7f7f7;
 }
 
