--- a/frontend/main.css
+++ b/frontend/main.css
@@ -644,7 +644,7 @@ textarea {
 }
 
 textarea:focus, input:focus {
-  border-color: transparent !important;
+  /*border-color: transparent !important;*/
 }
 
 /* ------------------------------------ */
