#67 changed placeholder color to make input fields look more clickable

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -381,7 +381,7 @@ LEVEL 3. SETTINGS
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #00ad5f;
+  color: #576760;
   opacity: 1; /* Firefox */
 }
 
